# teambuilder

./: Cargo.toml  README.md  index.html  styles.css
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  main.rs  teamgen.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: mod.rs  players.rs  teamgen.rs
