[package]
name = "teambuilder-ui"
version = "0.1.0"
edition = "2021"

# Shrink disk space used for builds
[profile.dev.package."*"]
opt-level = 3
codegen-units = 8
debug = false
strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
# A random leptos component library I found
thaw = { version = "0.4", features = ["csr"]}
palette = "*"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = {version="*", features=["Window", "Storage", "MediaQueryList"]}
gloo-net = "0.6"
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"]}
polars = {version = "0.44", default_features=false, features=["csv"]}

[workspace]
members = ["src-tauri"]
